tests/fixtures/crates/ui_test/tests/ui/test.stderr
error: a
 --> tests/ui/test.rs:3:19
  |
3 | #[ui_test_test::m(compile_error!("a");)]
  |                   ^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

